--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 <body>
 <div id="adRoot" class="invisible">
-  <div id="catchAll"></div>
-  <div id="cta">click here</div>
+  <div class="bg-image"></div>
+  <div class="logo-sprite"></div>
+  <div class="logo-sprite-retina"></div>
+
+  <div id="catchAll" class="catch-all hidden"></div>
+  <div id="cta" class="cta hidden">click here</div>
 </div>
 <div id="border-top" class="top-collapsed-border invisible"></div>
 <div id="border-left" class="left-collapsed-border invisible"></div>
