moving handlers to correct spot

--- a/_kit-specific-html/DCM/index.html
+++ b/_kit-specific-html/DCM/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="bundle.static" content="in.folder">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template DCM Direct</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
