--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="bundle.static" content="in.zip">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template DC Studio</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -15,7 +16,7 @@
   <div class="logo-sprite-retina"></div>
 
   <div id="catchAll" class="catch-all hidden"></div>
-  <div id="cta" class="cta hidden">click here</div>
+  <div id="cta" class="cta hidden">click here!!!</div>
 </div>
 <div id="border-top" class="top-collapsed-border invisible"></div>
 <div id="border-left" class="left-collapsed-border invisible"></div>
