--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
 </head>
 <body>
-<div id="adRoot" class="invisible">
+<div id="adRoot">
   <div class="bg-image"></div>
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
@@ -24,7 +24,9 @@
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
 <!-- build:js combined.js -->
 <script src="libs/vendor/bowser.min.js"></script>
-<script src="libs/vendor/greensock/TweenMax.min.js"></script>
+<script src="libs/vendor/greensock/TweenLite.min.js"></script>
+<script src="libs/vendor/greensock/TimelineLite.min.js"></script>
+<script src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
 <script src="libs/Animation.js"></script>
 <script src="libs/Ad.js"></script>
 <!-- endbuild -->
