making bowser optional

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
 <!-- build:js combined.js -->
-<script src="libs/vendor/bowser.min.js"></script>
+<script src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
 <script src="libs/vendor/greensock/TweenLite.min.js"></script>
 <script src="libs/vendor/greensock/TimelineLite.min.js"></script>
 <script src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
