fixing meta tag

--- a/_kit-specific-html/Atlas/index.html
+++ b/_kit-specific-html/Atlas/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="template.type" content="Atlas">
   <meta name="bundle.static" content="in.zip">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template Atlas</title>
@@ -10,17 +11,22 @@
   <script type="text/javascript">var ATLAS_TAG = "{{PUB_CLICKTHROUGH}}";</script>
 </head>
 <body>
-<div id="adRoot" class="invisible" onclick="javascript:window.open(ATLAS_TAG)">
-  <div id="catchAll"></div>
-  <div id="cta">click here</div>
+<div id="adRoot"  onclick="javascript:window.open(ATLAS_TAG)">
+  <div class="bg-image"></div>
+  <div class="logo-sprite"></div>
+  <div class="logo-sprite-retina"></div>
+  <div id="catchAll" class="catch-all hidden"></div>
+  <div id="cta" class="cta hidden">click here!!!</div>
 </div>
 <div id="border-top" class="top-collapsed-border invisible"></div>
 <div id="border-left" class="left-collapsed-border invisible"></div>
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
 <!-- build:js combined.js -->
-<script src="libs/vendor/bowser.min.js"></script>
-<script src="libs/vendor/greensock/TweenMax.min.js"></script>
+<script src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
+<script src="libs/vendor/greensock/TweenLite.min.js"></script>
+<script src="libs/vendor/greensock/TimelineLite.min.js"></script>
+<script src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
 <script src="libs/Animation.js"></script>
 <script src="libs/Ad.js"></script>
 <!-- endbuild -->
@@ -32,7 +38,7 @@
 </script>
 
 <noscript>
-  <a href="{{PUB_CLICKTHROUGH}}" target="_blank"><img src="Altas_Template_300x250.jpg" /></a>
+  <a href="{{PUB_CLICKTHROUGH}}" target="_blank"><img src="display-standard-template.jpg" /></a><!--Has to be same as folder name-->
 </noscript>
 
 </body>
