--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="template.type" content="DCStudio">
   <meta name="bundle.static" content="in.zip">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template DC Studio</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+  <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
 </head>
 <body>
 <div id="adRoot">
   <div class="bg-image"></div>
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
-
   <div id="catchAll" class="catch-all hidden"></div>
   <div id="cta" class="cta hidden">click here!!!</div>
 </div>
@@ -30,7 +30,6 @@
 <script src="libs/Animation.js"></script>
 <script src="libs/Ad.js"></script>
 <!-- endbuild -->
-<!-- for FT to work all this needs to be below body -->
 <script type="text/javascript">
   window.clickHandler = function () {
     Enabler.exit('exit');
