updating readme with linter directions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
   <div id="catchAll" class="catch-all hidden"></div>
-  <div id="cta" class="cta hidden">click here!!!</div>
+  <div id="cta" class="cta hidden">click here</div>
 </div>
 <div id="border-top" class="top-collapsed-border invisible"></div>
 <div id="border-left" class="left-collapsed-border invisible"></div>
