--- a/_kit-specific-html/DCStudio/index.html
+++ b/_kit-specific-html/DCStudio/index.html
@@ -22,13 +22,15 @@
 <div id="border-left" class="left-collapsed-border invisible"></div>
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
+<!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
+<!--<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>-->
 <!-- build:js combined.js -->
-<script src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
-<script src="libs/vendor/greensock/TweenLite.min.js"></script>
-<script src="libs/vendor/greensock/TimelineLite.min.js"></script>
-<script src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
-<script src="libs/Animation.js"></script>
-<script src="libs/Ad.js"></script>
+<script type="text/javascript" src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
+<script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
+<script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
+<script type="text/javascript" src="libs/Animation.js"></script>
+<script type="text/javascript" src="libs/Ad.js"></script>
 <!-- endbuild -->
 <script type="text/javascript">
   window.clickHandler = function () {
