--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="template.type" content="Sizmek">
   <meta name="bundle.static" content="in.folder">
-  <meta name="ad.size" content="width=300,height=250"> 
+  <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template Sizmek</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://secure-ds.serving-sys.com/BurstingScript/EBLoader.js"></script>
@@ -22,13 +22,15 @@
 <div id="border-left" class="left-collapsed-border invisible"></div>
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
+<!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>-->
 <!-- build:js combined.js -->
-<script src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
-<script src="libs/vendor/greensock/TweenLite.min.js"></script>
-<script src="libs/vendor/greensock/TimelineLite.min.js"></script>
-<script src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
-<script src="libs/Animation.js"></script>
-<script src="libs/Ad.js"></script>
+<script type="text/javascript" src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
+<script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
+<script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
+<script type="text/javascript" src="libs/Animation.js"></script>
+<script type="text/javascript" src="libs/Ad.js"></script>
 <!-- endbuild -->
 <script type="text/javascript">
   window.clickHandler = function () {
