--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -7,7 +7,7 @@
   <meta name="bundle.static" content="in.folder">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template Sizmek</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://secure-ds.serving-sys.com/BurstingScript/EBLoader.js"></script>
 </head>
 <body>
