--- a/_kit-specific-html/AdWords/index.html
+++ b/_kit-specific-html/AdWords/index.html
@@ -7,7 +7,7 @@
   <meta name="bundle.static" content="in.folder">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template DC AdWords</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://tpc.googlesyndication.com/pagead/gadgets/html5/api/exitapi.js"></script>
 </head>
 <body>
