--- a/_kit-specific-html/Atlas/index.html
+++ b/_kit-specific-html/Atlas/index.html
@@ -7,7 +7,7 @@
   <meta name="bundle.static" content="in.zip">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template Atlas</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript">var ATLAS_TAG = "{{PUB_CLICKTHROUGH}}";</script>
 </head>
 <body>
