--- a/_kit-specific-html/DCM/index.html
+++ b/_kit-specific-html/DCM/index.html
@@ -7,7 +7,7 @@
   <meta name="bundle.static" content="in.folder">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template DCM Direct</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript">var clickTag = "https://www.google.com";</script>
 </head>
 <body>
