--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="bundle.static" content="in.zip">
   <meta name="ad.size" content="width=300,height=250">
   <title>HTML5 Template DC Studio</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
 </head>
 <body>
