--- a/_kit-specific-html/DCStudio/index.html
+++ b/_kit-specific-html/DCStudio/index.html
@@ -6,6 +6,8 @@
   <meta name="template.type" content="DCStudio">
   <meta name="bundle.static" content="in.zip">
   <meta name="ad.size" content="width=300,height=250">
+  <meta name="ad.fileSize" content="200">
+  <meta name="ad.numFiles" content="15">
   <title>HTML5 Template DC Studio</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
