--- a/_kit-specific-html/FT/index.html
+++ b/_kit-specific-html/FT/index.html
@@ -6,6 +6,8 @@
   <meta name="template.type" content="FlashTalking">
   <meta name="bundle.static" content="in.folder">
   <meta name="ad.size" content="width=300,height=250">
+  <meta name="ad.fileSize" content="200">
+  <meta name="ad.numFiles" content="15">
   <title>HTML5 Template FlashTalking</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
 </head>
