--- a/_kit-specific-html/DCM/index.html
+++ b/_kit-specific-html/DCM/index.html
@@ -8,6 +8,7 @@
   <meta name="ad.size" content="width=300,height=250">
   <meta name="ad.fileSize" content="200">
   <meta name="ad.numFiles" content="15">
+  <meta name="ad.staticFileSize" content="40">
   <title>HTML5 Template DCM Direct</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript">var clickTag = "https://www.google.com";</script>
