--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -8,6 +8,7 @@
   <meta name="ad.size" content="width=300,height=250">
   <meta name="ad.fileSize" content="200">
   <meta name="ad.numFiles" content="15">
+  <meta name="ad.staticFileSize" content="40">
   <title>HTML5 Template Sizmek</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://secure-ds.serving-sys.com/BurstingScript/EBLoader.js"></script>
