--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="ad.size" content="width=300,height=250">
   <meta name="ad.fileSize" content="200">
   <meta name="ad.numFiles" content="15">
+  <meta name="ad.staticFileSize" content="40">
   <title>HTML5 Template DC Studio</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
