--- a/_kit-specific-html/DCStudio/index.html
+++ b/_kit-specific-html/DCStudio/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="template.type" content="DCStudio">
-  <meta name="bundle.static" content="in.zip">
-  <meta name="ad.size" content="width=300,height=250">
-  <meta name="ad.fileSize" content="200">
-  <meta name="ad.numFiles" content="15">
-  <meta name="ad.staticFileSize" content="40">
+  <meta name="bundle.static" content="in.zip"><!--Valid values are "in.zip" and "in.folder" -->
+  <meta name="ad.size" content="width=300,height=250"><!--Dimensions in Pixels-->
+  <meta name="ad.fileSize" content="200"><!--File Size of Final Zip in Kilobytes-->
+  <meta name="ad.numFiles" content="15"><!--Don't Edit-->
+  <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
   <title>HTML5 Template DC Studio</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
@@ -28,7 +28,7 @@
 <!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
 <!--<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>-->
 <!-- build:js combined.js -->
-<script type="text/javascript" src="libs/vendor/bowser.min.js"></script> <!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="libs/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
 <script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
