--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="template.type" content="DCStudio">
-  <meta name="bundle.static" content="in.zip">
-  <meta name="ad.size" content="width=300,height=250">
-  <meta name="ad.fileSize" content="200">
-  <meta name="ad.numFiles" content="15">
-  <meta name="ad.staticFileSize" content="40">
-  <title>HTML5 Template DC Studio</title>
+  <meta name="bundle.static" content="in.zip"><!--Valid values are "in.zip" and "in.folder" -->
+  <meta name="ad.size" content="width=300,height=250"><!--Dimensions in Pixels-->
+  <meta name="ad.fileSize" content="200"><!--File Size of Final Zip in Kilobytes-->
+  <meta name="ad.numFiles" content="15"><!--Don't Edit-->
+  <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
+  <title>HTML5 Template DC Studio  </title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
 </head>
