--- a/_kit-specific-html/DCStudio/index.html
+++ b/_kit-specific-html/DCStudio/index.html
@@ -28,7 +28,8 @@
 <!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
 <!--<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>-->
 <!-- build:js combined.js -->
-<script type="text/javascript" src="libs/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="libs/vendor/bowser.min.js"></script>
+<!-- If you don't need this you can remove it -->
 <script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
@@ -37,15 +38,12 @@
 <!-- endbuild -->
 <script type="text/javascript">
   window.clickHandler = function () {
-    Enabler.exit('exit','https://www.google.com'); // set initial URL here, can still be overwritten in DC Studio or DCM
+    Enabler.exit('exit', 'https://www.google.com'); // set initial URL here, can still be overwritten in DC Studio or DCM
   };
   var adVisibleFunc = function () {
-    if (Enabler.isVisible() === true) {
-      window.ad.init();
-    } else {
-      Enabler.addEventListener(studio.events.StudioEvent.VISIBLE, window.ad.init);
-    }
-  }
+    console.log("Enabler VISIBLE");
+    window.ad.init();
+  };
   var pageLoadedFunc = function () {
     console.log("Enabler PAGE_LOADED");
     if (!Enabler.isVisible()) {
