--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -9,6 +9,7 @@
   <meta name="ad.fileSize" content="200"><!--File Size of Final Zip in Kilobytes-->
   <meta name="ad.numFiles" content="15"><!--Don't Edit-->
   <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
+  <meta name="ad.compression" content="60"><!--compression for jpeg sprites-->
   <title>HTML5 Template Sizmek</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://secure-ds.serving-sys.com/BurstingScript/EBLoader.js"></script>
