--- a/_kit-specific-html/AdWords/index.html
+++ b/_kit-specific-html/AdWords/index.html
@@ -33,6 +33,7 @@
 <script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
+<script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
 <script type="text/javascript" src="libs/Animation.js"></script>
 <script type="text/javascript" src="libs/Ad.js"></script>
 <!-- endbuild -->
