--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -39,6 +39,7 @@
 <!-- endbuild -->
 <script type="text/javascript">
   window.clickHandler = function () {
+    console.log ('clickTag');
     EB.clickthrough();
   };
   if (EB.isInitialized() === true) {
