--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta name="template.type" content="DCStudio">
-  <meta name="bundle.static" content="in.zip"><!--Valid values are "in.zip" and "in.folder" -->
+  <meta name="template.type" content="DCM">
+  <meta name="bundle.static" content="in.folder"><!--Valid values are "in.zip" and "in.folder" -->
   <meta name="ad.size" content="width=300,height=250"><!--Dimensions in Pixels-->
   <meta name="ad.fileSize" content="200"><!--File Size of Final Zip in Kilobytes-->
   <meta name="ad.numFiles" content="15"><!--Don't Edit-->
   <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
   <meta name="ad.compression" content="60"><!--compression for jpeg sprites-->
-  <title>HTML5 Template DC Studio </title>
+  <title>HTML5 Template DCM Direct</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
-  <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+  <script type="text/javascript">var clickTag = "https://www.google.com";</script>
 </head>
 <body>
-<div id="adRoot">
+<div id="adRoot" onclick="javascript:window.open(window.clickTag)">
   <div class="bg-image"></div>
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
   <div id="catchAll" class="catch-all hidden"></div>
-  <div id="cta" class="cta hidden">click here</div>
+  <div id="cta" class="cta hidden">click here!!!</div>
 </div>
 <div id="border-top" class="top-collapsed-border invisible"></div>
 <div id="border-left" class="left-collapsed-border invisible"></div>
@@ -29,8 +29,7 @@
 <!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
 <!--<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>-->
 <!-- build:js combined.js -->
-<script type="text/javascript" src="libs/vendor/bowser.min.js"></script>
-<!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="libs/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
 <script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
@@ -40,34 +39,9 @@
 <!-- endbuild -->
 <script type="text/javascript">
   window.clickHandler = function () {
-    Enabler.exit('exit','https://www.google.com'); // set initial URL here, can still be overwritten in DC Studio or DCM
+    return 'Handler is silent';
   };
-  var adVisibleFunc = function () {
-    console.log("Enabler VISIBLE");
-      window.ad.init();
-
-  };
-  var pageLoadedFunc = function () {
-    console.log("Enabler PAGE_LOADED");
-    if (!Enabler.isVisible()) {
-      Enabler.addEventListener(studio.events.StudioEvent.VISIBLE, adVisibleFunc);
-    } else {
-      adVisibleFunc();
-    }
-  };
-  var enablerInitFunc = function () {
-    console.log("Enabler INIT");
-    if (!Enabler.isPageLoaded()) {
-      Enabler.addEventListener(studio.events.StudioEvent.PAGE_LOADED, pageLoadedFunc);
-    } else {
-      pageLoadedFunc();
-    }
-  };
-  if (!Enabler.isInitialized()) {
-    Enabler.addEventListener(studio.events.StudioEvent.INIT, enablerInitFunc);
-  } else {
-    enablerInitFunc();
-  }
+  window.onload = window.ad.init;
 </script>
 </body>
 </html>
