working on svg injection

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div class="bg-image"></div>
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
+  <div id='demo' class='injected-svg'></div>
   <div id="catchAll" class="catch-all hidden"></div>
   <div id="cta" class="cta hidden">click here!!!</div>
 </div>
@@ -34,6 +35,7 @@
 <script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
 <script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
 <script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
+<script type="text/javascript" src="libs/svglib.js"></script>
 <script type="text/javascript" src="libs/Animation.js"></script>
 <script type="text/javascript" src="libs/Ad.js"></script>
 <!-- endbuild -->
