--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -19,6 +19,7 @@
   <div class="bg-image"></div>
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
+  <div id='demo' class='injected-svg'></div>
   <div id="catchAll" class="catch-all hidden"></div>
   <div id="cta" class="cta hidden">click here!!!</div>
 </div>
@@ -30,9 +31,7 @@
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>-->
 <!-- build:js combined.js -->
 <script type="text/javascript" src="libs/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
-<script type="text/javascript" src="libs/vendor/greensock/TweenLite.min.js"></script>
-<script type="text/javascript" src="libs/vendor/greensock/TimelineLite.min.js"></script>
-<script type="text/javascript" src="libs/vendor/greensock/plugins/CSSPlugin.min.js"></script>
+<script type="text/javascript" src="libs/vendor/greensock/TweenMax.min.js"></script>
 <script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
 <script type="text/javascript" src="libs/Animation.js"></script>
 <script type="text/javascript" src="libs/Ad.js"></script>
