--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -29,6 +29,7 @@
       <div class="bg-image"></div>
       <div class="logo-sprite"></div>
       <div class="logo-sprite-retina"></div>
+      <div id='demo' class='injected-svg'></div>
       <div id="catchAll" class="catch-all hidden"></div>
       <div id="cta" class="cta hidden">click here!!!</div>
     </div>
