--- a/_kit-specific-html/DCStudio/index.html
+++ b/_kit-specific-html/DCStudio/index.html
@@ -30,10 +30,10 @@
 <!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
 <!--<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>-->
 <!-- build:js combined.js -->
-<script type="text/javascript" src="libs/vendor/bowser.min.js"></script>
-<!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="libs/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
 <script type="text/javascript" src="libs/vendor/greensock/TweenMax.min.js"></script>
 <script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
+<script type="text/javascript" src="libs/svglib.js"></script>
 <script type="text/javascript" src="libs/Animation.js"></script>
 <script type="text/javascript" src="libs/Ad.js"></script>
 <!-- endbuild -->
