removing testing index

--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -41,6 +41,7 @@
     <!-- build:js combined.js -->
     <script type="text/javascript" src="libs/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
     <script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
+    <script type="text/javascript" src="libs/svglib.js"></script>
     <script type="text/javascript" src="libs/Animation.js"></script>
     <script type="text/javascript" src="libs/Ad.js"></script>
     <!-- endbuild -->
