adding in flags

--- a/_kit-specific-html/Atlas/index.html
+++ b/_kit-specific-html/Atlas/index.html
@@ -10,6 +10,7 @@
   <meta name="ad.numFiles" content="15"><!--Don't Edit-->
   <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
   <meta name="ad.compression" content="60"><!--compression for jpeg sprites-->
+  <meta name="ad.minifyhtml" content="true"><!--minify html file  set to false for sizmek-->
   <title>HTML5 Template Atlas</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript">var ATLAS_TAG = "{{PUB_CLICKTHROUGH}}";</script>
