--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -16,6 +16,7 @@
     <!--File Size of static backup in Kilobytes-->
     <meta name="ad.compression" content="60">
     <!--compression for jpeg sprites-->
+    <meta name="ad.minifyhtml" content="true"><!--minify html file  set to false for sizmek-->
     <title>HTML5 TemplateadForm</title>
     <link inline rel="stylesheet" type="text/css" href="css/style.css">
     <script>document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');</script>
