--- a/_kit-specific-html/DCM/index.html
+++ b/_kit-specific-html/DCM/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript">var clickTag = "https://www.google.com";</script>
 </head>
 <body>
+<div id="image-hack"></div>
 <div id="adRoot" onclick="javascript:window.open(window.clickTag)">
   <div class="bg-image"></div>
   <div class="logo-sprite"></div>
@@ -35,6 +36,7 @@
 <script type="text/javascript" src="libs/vendor/greensock/TweenMax.min.js"></script>
 <script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
 <script type="text/javascript" src="libs/svglib.js"></script>
+<script type="text/javascript" src="libs/svg-img-loader.js"></script>
 <script type="text/javascript" src="libs/Animation.js"></script>
 <script type="text/javascript" src="libs/Ad.js"></script>
 <!-- endbuild -->
