fixing busted js

--- a/_kit-specific-html/FT/index.html
+++ b/_kit-specific-html/FT/index.html
@@ -28,14 +28,17 @@
 <div id="border-left" class="left-collapsed-border invisible"></div>
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
-</script>-->
-<script type="text/javascript" src="libs/vendor/bowser.min.js"></script>
-<script type="text/javascript" src="libs/vendor/greensock/TweenMax.min.js"></script>
-<script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
-<script type="text/javascript" src="libs/svglib.js"></script>
-<script type="text/javascript" src="libs/svg-img-loader.js"></script>
-<script type="text/javascript" src="libs/Animation.js"></script>
-<script type="text/javascript" src="libs/Ad.js"></script>
+<!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>-->
+<!-- build:js combined.js -->
+<script type="text/javascript" src="js/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="js/vendor/greensock/TweenMax.min.js"></script>
+<script type="text/javascript" src="js/vendor/SmoothifyPlugin.js"></script>
+<script type="text/javascript" src="js/svglib.js"></script>
+<script type="text/javascript" src="js/svg-img-loader.js"></script>
+<script type="text/javascript" src="js/Animation.js"></script>
+<script type="text/javascript" src="js/Ad.js"></script>
+<!-- endbuild -->
 <script src="https://cdn.flashtalking.com/frameworks/js/api/2/8/html5API.js"></script>
 <script type="text/javascript">
   var myFT = new FT;
