--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -34,12 +34,12 @@
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script type="text/javascript" src="libs/vendor/bowser.min.js"></script>
-<script type="text/javascript" src="libs/vendor/SmoothifyPlugin.js"></script>
-<script type="text/javascript" src="libs/svglib.js"></script>
-<script type="text/javascript" src="libs/svg-img-loader.js"></script>
-<script type="text/javascript" src="libs/Animation.js"></script>
-<script type="text/javascript" src="libs/Ad.js"></script>
+<script type="text/javascript" src="js/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
+<script type="text/javascript" src="js/vendor/SmoothifyPlugin.js"></script>
+<script type="text/javascript" src="js/svglib.js"></script>
+<script type="text/javascript" src="js/svg-img-loader.js"></script>
+<script type="text/javascript" src="js/Animation.js"></script>
+<script type="text/javascript" src="js/Ad.js"></script>
 <script type="text/javascript">
   //http://support.adform.com/documentation/build-html5-banners/html5-banner-specifications/required-files-structure/
   window.clickHandler = function () {
