--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   var dataManager = DataManager();
   var downloadPreview = false;
   var previewNumber = 1;
-  var sheetId = "";
-  var projectId = "";
+  var sheetId = ""; // If this is an empty string the dynamic system will be ignored
+  var projectId = "";// If this is an empty string the dynamic system will be ignored
 </script>
 
 
