--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -13,7 +13,7 @@
   <meta name="ad.minifyhtml" content="true">
   <title>HTML5 TemplateadForm</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
-  <script>document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');</script>
+  <script>document.write('<script src="' + (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv=' + Math.random()) + '"><\/script>');</script>
   <script type="text/javascript">
     var clickTAGvalue = dhtml.getVar('clickTAG', 'http://www.example.com');
     var landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
@@ -34,42 +34,55 @@
 <div id="border-right" class="right-collapsed-border invisible"></div>
 <div id="border-bottom" class="bottom-collapsed-border invisible"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+<!-- build:js combined.js -->
 <script type="text/javascript" src="js/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
 <script type="text/javascript" src="js/vendor/SmoothifyPlugin.js"></script>
+<script type="text/javascript" src="js/vendor/DynamicAd.js"></script> <!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
+<script type="text/javascript" src="js/vendor/DataManager.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
+<script type="text/javascript" src="js/vendor/DynamicBootloader.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/svglib.js"></script>
 <script type="text/javascript" src="js/svg-img-loader.js"></script>
 <script type="text/javascript" src="js/Animation.js"></script>
 <script type="text/javascript" src="js/Ad.js"></script>
+<!-- endbuild -->
+
 <script type="text/javascript">
   //http://support.adform.com/documentation/build-html5-banners/html5-banner-specifications/required-files-structure/
   window.clickHandler = function () {
-    window.open(clickTAGvalue,landingpagetarget);
+    window.open(clickTAGvalue, landingpagetarget);
   };
   var state = dhtml.getState();
   console.log('The current state is: ' + state);
   var bn = dhtml.getVar('bn', 0);
-  if (bn){
+  if (bn) {
     dhtml.sharedEvents.once('pageLoadComplete', init);
     dhtml.external.initPoliteMode();
-  }else{
+  } else {
     setTimeout(init, 2000);
   }
+
   function init() {
     if (state === 'visible') {
-      window.ad.init ()
+      try {
+        DynamicBootloader(window.ad.init);
+      } catch (err) {
+        console.log('Dynamics Engine Not Included, Proceed as standard');
+        window.ad.init()
+      }
       return
     }
     dhtml.sharedEvents.on('changed:state', function (s) {
       console.log('Last state was: ' + state);
       console.log('State has changed to: ' + s);
       state = s;
-
       if (state === 'visible') {
-
-        window.ad.init ()
-
+        try {
+          DynamicBootloader(window.ad.init);
+        } catch (err) {
+          console.log('Dynamics Engine Not Included, Proceed as standard');
+          window.ad.init()
+        }
       }
-
     })
   }
 </script>
