--- a/index.html
+++ b/index.html
@@ -53,28 +53,21 @@
   var previewNumber = 1;
   var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
   var projectId = "000_Dynamic_Ad_Template";
-
   // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
 </script>
-
 
 
 <script type="text/javascript">
   window.clickHandler = function () {
     return 'Handler is silent';
   };
-  window.onload = function (){
-
+  window.onload = function () {
     try {
-      DynamicBootloader (window.ad.init);
-    }catch (err){
-
-      console.log ('Dynamics Engine Not Included, Proceed as standard');
-
+      DynamicBootloader(window.ad.init);
+    } catch (err) {
+      console.log('Dynamics Engine Not Included, Proceed as standard');
+      window.ad.init()
     }
-
-
-
   }
 </script>
 </body>
