--- a/_kit-specific-html/Atlas/index.html
+++ b/_kit-specific-html/Atlas/index.html
@@ -44,6 +44,21 @@
 <script type="text/javascript" src="js/Ad.js"></script>
 <!-- endbuild -->
 <script type="text/javascript">
+
+  try {
+    var dynamicAd = DynamicAd();
+    var dataManager = DataManager();
+    var downloadPreview = false;
+    var previewNumber = 1;
+    var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
+    var projectId = "000_Dynamic_Ad_Template";
+    // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
+  } catch (err) {
+    console.log('Dynamics Engine Not Included, Proceed as standard');
+  }
+
+</script>
+<script type="text/javascript">
   window.clickHandler = function () {
     return 'Handler is silent';
   };
