--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -47,6 +47,22 @@
 <!-- endbuild -->
 
 <script type="text/javascript">
+
+  try {
+    var dynamicAd = DynamicAd();
+    var dataManager = DataManager();
+    var downloadPreview = false;
+    var previewNumber = 1;
+    var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
+    var projectId = "000_Dynamic_Ad_Template";
+    // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
+  } catch (err) {
+    console.log('Dynamics Engine Not Included, Proceed as standard');
+  }
+
+</script>
+
+<script type="text/javascript">
   //http://support.adform.com/documentation/build-html5-banners/html5-banner-specifications/required-files-structure/
   window.clickHandler = function () {
     window.open(clickTAGvalue, landingpagetarget);
