--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
 <!-- endbuild -->
 
 <script type="text/javascript">
-  var dynamicAd = DynamicAd();
-  var dataManager = DataManager();
-  var downloadPreview = false;
-  var previewNumber = 1;
-  var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
-  var projectId = "000_Dynamic_Ad_Template";
-  // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
+
+  try {
+    var dynamicAd = DynamicAd();
+    var dataManager = DataManager();
+    var downloadPreview = false;
+    var previewNumber = 1;
+    var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
+    var projectId = "000_Dynamic_Ad_Template";
+    // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
+  } catch (err) {
+    console.log('Dynamics Engine Not Included, Proceed as standard');
+  }
+
 </script>
 
 
