fixes to DCM template. updated DCStudio Template to support dynamic system.

--- a/_kit-specific-html/DCStudio/index.html
+++ b/_kit-specific-html/DCStudio/index.html
@@ -64,6 +64,7 @@
   };
   var adVisibleFunc = function () {
     console.log("Enabler VISIBLE");
+    // Enabler.setProfileId(10023507);
     try {
       DynamicBootloader(window.ad.init);
     } catch (err) {
