turning off dynamic system by default.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   try {
     var dynamicAd = DynamicAd();
     var dataManager = DataManager();
-    var downloadPreview = true;
+    var downloadPreview = false;
     var previewNumber = 1;
     var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
     var projectId = "000_Dynamic_Ad_Template";
