adding ability to set jpeg sprite bg image color

--- a/_kit-specific-html/Atlas/index.html
+++ b/_kit-specific-html/Atlas/index.html
@@ -11,6 +11,7 @@
   <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
   <meta name="ad.compression" content="60"><!--compression for jpeg sprites-->
   <meta name="ad.minifyhtml" content="true"><!--minify html file  set to false for sizmek-->
+  <meta name="ad.spriteBackgroundColor" content="#FFFFFF"><!--background color for jpeg sprites-->
   <title>HTML5 Template Atlas</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript">var ATLAS_TAG = "{{PUB_CLICKTHROUGH}}";</script>
