--- a/_kit-specific-html/Sizmek/index.html
+++ b/_kit-specific-html/Sizmek/index.html
@@ -11,6 +11,7 @@
   <meta name="ad.staticFileSize" content="40">
   <meta name="ad.compression" content="60">
   <meta name="ad.minifyhtml" content="false">
+  <meta name="ad.spriteBackgroundColor" content="#FFFFFF"><!--background color for jpeg sprites-->
   <title>HTML5 Template Sizmek</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://secure-ds.serving-sys.com/BurstingScript/EBLoader.js"></script>
