--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -11,6 +11,7 @@
   <meta name="ad.staticFileSize" content="40">
   <meta name="ad.compression" content="60">
   <meta name="ad.minifyhtml" content="true">
+  <meta name="ad.spriteBackgroundColor" content="#FFFFFF"><!--background color for jpeg sprites-->
   <title>HTML5 TemplateadForm</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script>document.write('<script src="' + (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv=' + Math.random()) + '"><\/script>');</script>
