--- a/_kit-specific-html/AdWords/index.html
+++ b/_kit-specific-html/AdWords/index.html
@@ -11,6 +11,7 @@
   <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
   <meta name="ad.compression" content="60"><!--compression for jpeg sprites-->
   <meta name="ad.minifyhtml" content="true"><!--minify html file  set to false for sizmek-->
+  <meta name="ad.spriteBackgroundColor" content="#FFFFFF"><!--background color for jpeg sprites-->
   <title>HTML5 Template DC AdWords</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="https://tpc.googlesyndication.com/pagead/gadgets/html5/api/exitapi.js"></script>
