--- a/_kit-specific-html/FT/index.html
+++ b/_kit-specific-html/FT/index.html
@@ -11,6 +11,7 @@
   <meta name="ad.staticFileSize" content="40">
   <meta name="ad.compression" content="60">
   <meta name="ad.minifyhtml" content="true">
+  <meta name="ad.spriteBackgroundColor" content="#FFFFFF"><!--background color for jpeg sprites-->
   <title>HTML5 Template FlashTalking</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
 </head>
